2010-07-12  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Antti Koivisto.

        Canvas: arc() with startAngle == endAngle shouldn't add to the path
        https://bugs.webkit.org/show_bug.cgi?id=41420

        Unskip (for Qt) test that now passes:
        - canvas/philip/tests/2d.path.stroke.prune.arc.html

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-context-2d-stroke

        * platform/qt/Skipped:
2010-07-12  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Antti Koivisto.

        Canvas: arc() with startAngle == endAngle shouldn't add to the path
        https://bugs.webkit.org/show_bug.cgi?id=41420

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-context-2d-stroke

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::arc):

Canonical link: https://commits.webkit.org/53941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63073 268f45cc-cd09-0410-ab3c-d52691b4dbfc