WebCore/html/canvas/CanvasRenderingContext2D.cpp
@@ -614,6 +614,10 @@ void CanvasRenderingContext2D::arc(float x, float y, float r, float sa, float ea
         ec = INDEX_SIZE_ERR;
         return;
     }
+
+    if (sa == ea)
+        return;
+
     if (!state().m_invertibleCTM)
         return;
     m_path.addArc(FloatPoint(x, y), r, sa, ea, anticlockwise);
